--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "wdio-chromedriver-service": "^5.0.2"
   },
   "dependencies": {
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "mocha": "^7.0.1"
   }
 }
